--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ video{
         height: 100%;
         object-fit: cover;
         z-index: -1;
-        background-size: fixed;
+       
 }
 
 .content{
@@ -38,5 +38,9 @@ video{
     padding: 0 20px;
     color: white;
     text-align: center;
+    
 }
 
+li{
+    color: black;
+}
